# ast-viewer-v2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  graphql_test_payloads.md  pyproject.toml  pytest.ini  run_local.py  run_tests.py  test_rest_api.py
docker/: entrypoint.sh  healthcheck.sh
nginx/: nginx.conf  prod.conf
scripts/: generate_docs.py  init-neo4j.cypher  init-postgres.sql
src/ast_viewer/: __init__.py  alembic.ini
src/ast_viewer/adapters/: __init__.py  base.py  python.py  tree_sitter.py
src/ast_viewer/analyzers/: __init__.py  integrated.py  intelligence.py  universal.py
src/ast_viewer/api/: __init__.py  docs_server.py  endpoints.py  examples.py  main.py  middleware.py  models.py  visualization_endpoints.py
src/ast_viewer/common/: __init__.py  converters.py  database.py  errors.py  git_utils.py  identifiers.py  language_utils.py  metrics.py
src/ast_viewer/database/: __init__.py  integration.py  models.py  neo4j_client.py  postgres_client.py  setup.py
src/ast_viewer/graphql/: __init__.py  context.py  dataloaders.py  docs_generator.py  errors.py  extensions.py  inputs.py  integration.py  legacy_schema.py  modern_schema.py  schema.py
src/ast_viewer/graphql/types/: __init__.py  enums.py  result_types.py
src/ast_viewer/migrations/: env.py
src/ast_viewer/migrations/versions/: 20250908_1510_529c73221de5_initial_database_schema.py
src/ast_viewer/models/: __init__.py  universal.py
src/ast_viewer/visualizations/: __init__.py  engine.py  exporters.py  renderers.py
tests/: README_TDD.md  __init__.py  conftest.py  requirements-test.txt  test_neo4j_tdd.py
