[project]
name = "ast-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.6",
    "neo4j>=5.28.2",
    "networkx>=3.5",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "strawberry-graphql>=0.282.0",
    "tree-sitter>=0.25.1",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn>=0.32.1",
]
